[package]
name = "aicent-demo"
description = "Aicent Stack: Integrated Simulation Suite for the Six-Domain Sovereign AI Organism."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "http://aicent.com/Demo/"
documentation = "https://github.com/Aicent-Stack/manifesto"
keywords = ["ai-simulation", "sovereign-ai", "reflex-arc", "128-bit-atomic", "rfc-standard"]
categories = ["development-tools", "simulation", "robotics", "network-programming"]
rust-version = "1.85"

# ====================================================================
# [BINARIES] - The Six-Domain Organism & Hive Command Suite
# Each binary acts as a surgical entry point for auditing specific RFCs.
# ====================================================================

# [RFC-001] AICENT: The Brain (Integrated Master Commander)
[[bin]]
name = "aicent-organism"
path = "src/bin/aicent-organism.rs"

# [RFC-002] RTTP: The Nerves (Neural Spine Audit)
[[bin]]
name = "rttp-demo"
path = "src/bin/rttp-demo.rs"

# [RFC-003] RPKI: The Immunity (Pathogen Isolation Audit)
[[bin]]
name = "rpki-demo"
path = "src/bin/rpki-demo.rs"

# [RFC-004] ZCMK: The Blood (Metabolic Clearing Audit)
[[bin]]
name = "zcmk-demo"
path = "src/bin/zcmk-demo.rs"

# [RFC-005] GTIOT: The Body (Action-Collapse Audit)
[[bin]]
name = "gtiot-demo"
path = "src/bin/gtiot-demo.rs"

# [RFC-006] AICENT-NET: The Hive (Collective Intelligence Audit)
[[bin]]
name = "aicent-net-demo"
path = "src/bin/aicent-net-demo.rs"

# ====================================================================
# [DEPENDENCIES] - Integrated Workspace DNA
# Inheriting industrial-grade primitives from the root Aicent-Stack.
# ====================================================================

[dependencies]
# Core Sovereign Domains
aicent     = { workspace = true }
rttp       = { workspace = true }
rpki       = { workspace = true }
zcmk       = { workspace = true }
gtiot      = { workspace = true }
aicent-net = { workspace = true }

# Integrated Utilities for High-Fidelity Simulation
anyhow  = { workspace = true }
serde   = { workspace = true, features = ["derive"] }
tokio   = { workspace = true, features = ["full"] }
rand    = { workspace = true } # For simulating MITM hijacks and chaos scenarios
tracing = { workspace = true } # Industrial telemetry for sub-ms logs

[dev-dependencies]
# Performance benchmarking tools for sub-millisecond validation
criterion = { workspace = true }
