[package]
name = "aicent-demo"
description = "Aicent Stack: Integrated Simulation Suite for the Seven-Pillar Sovereign AI Organism."
# Inheriting core protocol DNA from the imperial root workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "http://aicent.com/Demo/"
documentation = "https://github.com/Aicent-Stack/manifesto"
rust-version.workspace = true

# Keywords and categories for high-fidelity simulation and industrial audit
keywords = ["ai-simulation", "sovereign-ai", "reflex-arc", "seven-pillar", "128-bit-atomic"]
categories = ["development-tools", "simulation", "robotics", "network-programming"]

# ====================================================================
# [BINARIES] - The Seven-Pillar Organism & Hive Command Suite
# Each binary acts as a surgical entry point for auditing specific RFCs
# within the integrated epoekie-governed workspace context.
# ====================================================================

# [SOUL] EPOEKIE: The Sovereign Soul (Ethics Oracle Audit)
[[bin]]
name = "epoekie-demo"
path = "src/bin/epoekie-demo.rs"

# [RFC-001] AICENT: The Brain (Integrated Master Commander)
[[bin]]
name = "aicent-organism"
path = "src/bin/aicent-organism.rs"

# [RFC-002] RTTP: The Nerves (Neural Pulse Audit)
[[bin]]
name = "rttp-demo"
path = "src/bin/rttp-demo.rs"

# [RFC-003] RPKI: The Immunity (Pathogen Isolation Audit)
[[bin]]
name = "rpki-demo"
path = "src/bin/rpki-demo.rs"

# [RFC-004] ZCMK: The Blood (Metabolic Clearing Audit)
[[bin]]
name = "zcmk-demo"
path = "src/bin/zcmk-demo.rs"

# [RFC-005] GTIOT: The Body (Action-Collapse Audit)
[[bin]]
name = "gtiot-demo"
path = "src/bin/gtiot-demo.rs"

# [RFC-006] AICENT-NET: The Hive (Collective Intelligence Audit)
[[bin]]
name = "aicent-net-demo"
path = "src/bin/aicent-net-demo.rs"

# ====================================================================
# [DEPENDENCIES] - Integrated Workspace DNA
# Inheriting industrial-grade primitives from the root Aicent-Stack.
# ====================================================================

[dependencies]
# --- The Sovereign Soul (Pillar 0) ---
epoekie    = { workspace = true }

# --- Core Sovereign Domains (Pillars 1-6) ---
# Fully Integrated via Workspace DNA with 'std' support for simulation.
aicent     = { workspace = true, features = ["std"] }
rttp       = { workspace = true, features = ["std"] }
rpki       = { workspace = true, features = ["std"] }
zcmk       = { workspace = true, features = ["std"] }
gtiot      = { workspace = true, features = ["std"] }
aicent-net = { workspace = true, optional = true, features = ["std"] }

# --- Simulation Utilities & Telemetry ---
anyhow  = { workspace = true }
serde   = { workspace = true, features = ["derive"] }
rand    = { workspace = true } # For simulating MITM pathogens and chaos
tracing = { workspace = true } # Industrial telemetry for sub-ms auditing
tokio   = { workspace = true, features = ["full"] }

[features]
# Standard implementation: Optimized for high-fidelity cloud/edge simulation.
default = ["std"]

# [Standard v1.0] Standard library support for the unified organism.
# Re-exporting 'std' to internal organs to ensure full metabolic synchronization.
std = [
    "epoekie/std",
    "aicent/std",
    "rttp/std",
    "rpki/std",
    "zcmk/std",
    "gtiot/std",
    "aicent-net/std",
    "tokio/full"
]

# [RFC-006] Enable Hive-Mind simulation for collective intelligence testing.
swarm-simulation = ["aicent-net/std"]

[dev-dependencies]
# Performance benchmarking tools for sub-millisecond finality validation.
criterion = { workspace = true, features = ["async_tokio"] }
